# interesting

./: requirements.txt  setup.cfg
interesting/: main.py
