[metadata]
name = interesting
summary = Fancy gerrit queries
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@oddbit.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    interesting

[entry_points]
console_scripts =
    interesting = interesting.main:main

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

[flake8]
ignore = E731
